=================
Changes for crash
=================

Unreleased
==========

 - Added a configuration file that stores default values for Crash. The file is
   placed inside the user's application config folder.
   A path to a custom configuration file can be specified using the ``--config``
   command line argument.

 - Dropped Python 2.6 support

 - Added support for client certificates

 - It is now possible to disable autocompletion using ``--no-autocomplete``
   command line argument and to toggle autocomplete using the ``\autocomplete``
   crash command.

 - Fixed result info command output for whitespace other than space
   characters in queries.

 - Fixed call of `sysinfo` command when launching the shell.

2016/02/15 0.16.0
=================

 - The order of the keys / columns of the ``json`` output format is now
   deterministic and reflects the order of the columns in the executed query.

 - `Ctrl-c` no longer results in a KeyboardInterrupt exception if invoked while
   a query is being executed.

 - Added initial auto-completion support for the internal ``\format`` and
   ``\r`` commands.

 - Added a new ``\r`` command which can be used to read and execute statements
   from a file.

 - Fixed an error that occurred under python 3 if one of the built-in commands
   that require an argument were called without argument.

2015/12/14 0.15.0
=================

 - Added new format ``json_row`` which prints a dataset as json row-by-row
   in separate lines.

 - Added the ``sysinfo`` command which queries the ``sys`` tables for
   system and cluster information. The command requires Crate.io >= 0.54.0

2015/12/01 0.14.3
=================

 - Python2.6/2.7 output now prints unicode strings correctly when using
   csv output format

2015/10/20 0.14.2
=================

 - Fixed an assertion error that could occur under python2.7

2015/10/18 0.14.1
=================

 - Floating point values are no longer rounded to 6 places under python2.7 if